--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 
   <body>
     <header>
-      <a href="">WebStudio</a>
-
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="">Studio</a>
@@ -42,6 +41,8 @@
       </section>
 
       <section>
+        <h2>Our features</h2>
+
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -123,7 +124,7 @@
     </main>
 
     <footer>
-      <a href="">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
